force-app/main/default/objects/Case/fields/Accion_a_ejecutar__c.field-meta.xml
<CustomField>
    <fullName>Accion_a_ejecutar__c</fullName>
    <label>Acción a ejecutar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>