force-app/main/default/objects/Case/fields/AccountOwnerFilter__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerFilter__c</fullName>
    <formula>IF( Account.Owner.Profile.Name = &quot;Asesores autos&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOwnerFilter</label>
    <type>Checkbox</type>
</CustomField>