force-app/main/default/objects/Case/fields/Agencia_motos_Vitrina_autos__c.field-meta.xml
<CustomField>
    <fullName>Agencia_motos_Vitrina_autos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia motos/ Vitrina autos</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Casos (Concesionario / Vitrina)</relationshipLabel>
    <relationshipName>CasosPrincipal</relationshipName>
    <type>Lookup</type>
</CustomField>