force-app/main/default/objects/Case/fields/Agencia_motos_Vitrina_autos_formulado__c.field-meta.xml
<CustomField>
    <fullName>Agencia_motos_Vitrina_autos_formulado__c</fullName>
    <formula>If( CONTAINS( RecordType.DeveloperName , &quot;Autos_&quot;), Agencia_motos_Vitrina_autos__r.Name,Agencia_motos_Vitrina_autos__r.Agencia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia motos/Vitrina autos formulado</label>
    <type>Text</type>
</CustomField>