force-app/main/default/objects/Case/fields/Agencia_motos_Vitrina_autos_mas_cercana__c.field-meta.xml
<CustomField>
    <fullName>Agencia_motos_Vitrina_autos_mas_cercana__c</fullName>
    <label>Agencia motos/ Vitrina autos más cercana</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ciudad__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Agosto</fullName>
            </value>
            <value>
                <fullName>Alboraya</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Av. Fundación</fullName>
            </value>
            <value>
                <fullName>Av. Roosevelt</fullName>
            </value>
            <value>
                <fullName>Barrancabermeja</fullName>
            </value>
            <value>
                <fullName>Bello</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Bucaramanga</fullName>
            </value>
            <value>
                <fullName>Buenaventura</fullName>
            </value>
            <value>
                <fullName>Caldono</fullName>
            </value>
            <value>
                <fullName>Calle 80</fullName>
            </value>
            <value>
                <fullName>Caracas con 32</fullName>
            </value>
            <value>
                <fullName>Carrera Octava</fullName>
            </value>
            <value>
                <fullName>Cartago</fullName>
            </value>
            <value>
                <fullName>Castellana</fullName>
            </value>
            <value>
                <fullName>Cedritos</fullName>
            </value>
            <value>
                <fullName>Centro Barranquilla</fullName>
            </value>
            <value>
                <fullName>Cerrito</fullName>
            </value>
            <value>
                <fullName>Chaparral</fullName>
            </value>
            <value>
                <fullName>Ciudad Cordoba</fullName>
            </value>
            <value>
                <fullName>Cra 1</fullName>
            </value>
            <value>
                <fullName>Cra 15</fullName>
            </value>
            <value>
                <fullName>Cra 21</fullName>
            </value>
            <value>
                <fullName>El Bordo</fullName>
            </value>
            <value>
                <fullName>El Tambo</fullName>
            </value>
            <value>
                <fullName>El Único</fullName>
            </value>
            <value>
                <fullName>Envigado</fullName>
            </value>
            <value>
                <fullName>Esmeralda</fullName>
            </value>
            <value>
                <fullName>Espinal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>