force-app/main/default/objects/Case/fields/Agendamiento_Recall__c.field-meta.xml
<CustomField>
    <fullName>Agendamiento_Recall__c</fullName>
    <label>Agendamiento Recall</label>
    <type>DateTime</type>
</CustomField>