force-app/main/default/objects/Case/fields/Alerta_1__c.field-meta.xml
<CustomField>
    <fullName>Alerta_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 1</label>
    <type>Checkbox</type>
</CustomField>