force-app/main/default/objects/Case/fields/Alerta_2__c.field-meta.xml
<CustomField>
    <fullName>Alerta_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta 2</label>
    <type>Checkbox</type>
</CustomField>