force-app/main/default/objects/Case/fields/Alistamiento_completado__c.field-meta.xml
<CustomField>
    <fullName>Alistamiento_completado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alistamiento completado</label>
    <type>Checkbox</type>
</CustomField>