force-app/main/default/objects/Case/fields/Ano_modelo__c.field-meta.xml
<CustomField>
    <fullName>Ano_modelo__c</fullName>
    <label>Año modelo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>