force-app/main/default/objects/Case/fields/apoyo_concluido__c.field-meta.xml
<CustomField>
    <fullName>apoyo_concluido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>apoyo concluído</label>
    <type>Checkbox</type>
</CustomField>