force-app/main/default/objects/Case/fields/Area_involucrada__c.field-meta.xml
<CustomField>
    <fullName>Area_involucrada__c</fullName>
    <label>Area involucrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>Mesa de ayuda</fullName>
            </value>
            <value>
                <fullName>Taller</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
            <value>
                <fullName>Calidad</fullName>
            </value>
            <value>
                <fullName>Entidades</fullName>
            </value>
            <value>
                <fullName>Varios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>