force-app/main/default/objects/Case/fields/Asignado_para_bestdrive__c.field-meta.xml
<CustomField>
    <fullName>Asignado_para_bestdrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asignado para bestdrive</label>
    <type>Checkbox</type>
</CustomField>