force-app/main/default/objects/Case/fields/Auto_asignar_Caso__c.field-meta.xml
<CustomField>
    <fullName>Auto_asignar_Caso__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Asignación Automática</label>
    <type>Checkbox</type>
</CustomField>