force-app/main/default/objects/Case/fields/Autoriza_tratamiento_de_datos_personales__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_tratamiento_de_datos_personales__c</fullName>
    <label>Autoriza tratamiento de datos personales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
                <isActive>false</isActive>
                <label>Sí</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>