force-app/main/default/objects/Case/fields/Autos_RecordTypeDE__c.field-meta.xml
<CustomField>
    <fullName>Autos_RecordTypeDE__c</fullName>
    <label>Tipos de Registro para DigitalEngagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PQRSFS Autos</fullName>
            </value>
            <value>
                <fullName>Best Drive</fullName>
                <isActive>false</isActive>
                <label>Best Drive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>