force-app/main/default/objects/Case/fields/Best_Drive_Efectuado__c.field-meta.xml
<CustomField>
    <fullName>Best_Drive_Efectuado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Drive Efectuado</label>
    <type>Checkbox</type>
</CustomField>