force-app/main/default/objects/Case/fields/Cargo_del_usuario__c.field-meta.xml
<CustomField>
    <fullName>Cargo_del_usuario__c</fullName>
    <label>Cargo del usuario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>