force-app/main/default/objects/Case/fields/Casos_hijos__c.field-meta.xml
<CustomField>
    <fullName>Casos_hijos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total casos hijos</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>