force-app/main/default/objects/Case/fields/Celular_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Celular_del_cliente__c</fullName>
    <formula>IF (Account.PersonContact.MobilePhone &lt;&gt; null, Account.PersonContact.MobilePhone,  Account.AM_Telefono_representante__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular del cliente</label>
    <type>Text</type>
</CustomField>