force-app/main/default/objects/Case/fields/Cerdito_bancario_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Cerdito_bancario_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crédito desembolsado(si aplica)</label>
    <type>Checkbox</type>
</CustomField>