force-app/main/default/objects/Case/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>Chasis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>