force-app/main/default/objects/Case/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACACIAS</fullName>
            </value>
            <value>
                <fullName>ACEVEDO</fullName>
            </value>
            <value>
                <fullName>AGUACHICA</fullName>
            </value>
            <value>
                <fullName>AGUAZAUL</fullName>
            </value>
            <value>
                <fullName>AGUSTIN CODAZZI</fullName>
            </value>
            <value>
                <fullName>ANDES</fullName>
            </value>
            <value>
                <fullName>ANSERMA</fullName>
            </value>
            <value>
                <fullName>APARTADO</fullName>
            </value>
            <value>
                <fullName>ARAUCA</fullName>
            </value>
            <value>
                <fullName>ARAUQUITA</fullName>
            </value>
            <value>
                <fullName>ARJONA</fullName>
            </value>
            <value>
                <fullName>ARMENIA</fullName>
            </value>
            <value>
                <fullName>AYAPEL</fullName>
            </value>
            <value>
                <fullName>BARBOSA</fullName>
            </value>
            <value>
                <fullName>BARRANCABERMEJA</fullName>
            </value>
            <value>
                <fullName>BARRANQUILLA</fullName>
            </value>
            <value>
                <fullName>BELLO</fullName>
            </value>
            <value>
                <fullName>BOGOTÁ</fullName>
            </value>
            <value>
                <fullName>BOSCONIA</fullName>
            </value>
            <value>
                <fullName>BUCARAMANGA</fullName>
            </value>
            <value>
                <fullName>BUENAVENTURA</fullName>
            </value>
            <value>
                <fullName>BUGA</fullName>
            </value>
            <value>
                <fullName>CALDAS</fullName>
            </value>
            <value>
                <fullName>CALDONO</fullName>
            </value>
            <value>
                <fullName>CALI</fullName>
            </value>
            <value>
                <fullName>CALOTO</fullName>
            </value>
            <value>
                <fullName>CAREPA</fullName>
            </value>
            <value>
                <fullName>CARMEN DE BOLIVAR</fullName>
            </value>
            <value>
                <fullName>CARTAGENA</fullName>
            </value>
            <value>
                <fullName>CARTAGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>