force-app/main/default/objects/Case/fields/Ciudad_busqueda__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_busqueda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>