force-app/main/default/objects/Case/fields/Ciudad_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_despacho__c</fullName>
    <label>Ciudad de despacho</label>
    <length>40</length>
    <type>Text</type>
</CustomField>