force-app/main/default/objects/Case/fields/Ciudad_formulado__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_formulado__c</fullName>
    <formula>Ciudad_busqueda__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad formulado</label>
    <type>Text</type>
</CustomField>