force-app/main/default/objects/Case/fields/CiudadTexto__c.field-meta.xml
<CustomField>
    <fullName>CiudadTexto__c</fullName>
    <label>Ciudad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>