force-app/main/default/objects/Case/fields/Comentarios_novedad_alistamiento__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_novedad_alistamiento__c</fullName>
    <label>Comentarios novedad alistamiento</label>
    <length>1072</length>
    <type>LongTextArea</type>
</CustomField>