force-app/main/default/objects/Case/fields/Comentarios_Novedad_en_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Novedad_en_Despacho__c</fullName>
    <label>Comentarios Novedad en Despacho</label>
    <length>1072</length>
    <type>LongTextArea</type>
</CustomField>