force-app/main/default/objects/Case/fields/Concesionario_motos_Agencia_autos__c.field-meta.xml
<CustomField>
    <fullName>Concesionario_motos_Agencia_autos__c</fullName>
    <formula>If( CONTAINS(RecordType.Name, &quot;Best:Entrega:Mesa:Autos&quot;),  Agencia_motos_Vitrina_autos__r.Agencia__c ,  Agencia_motos_Vitrina_autos__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concesionario motos/ Agencia autos</label>
    <type>Text</type>
</CustomField>