force-app/main/default/objects/Case/fields/Correo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_cliente__c</fullName>
    <formula>IF (Account.PersonContact.Email &lt;&gt; Null, Account.PersonContact.Email,  Account.MC_Correo_electronico_Empresa__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo de cliente</label>
    <type>Text</type>
</CustomField>