force-app/main/default/objects/Case/fields/Direccion_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Despacho__c</fullName>
    <label>Dirección de Despacho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>