force-app/main/default/objects/Case/fields/Direccion_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Direccion_del_Cliente__c</fullName>
    <formula>Account.AM_Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección del Cliente</label>
    <type>Text</type>
</CustomField>