force-app/main/default/objects/Case/fields/Documentos_Administrativos_completos__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Administrativos_completos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Administrativos completos</label>
    <type>Checkbox</type>
</CustomField>