force-app/main/default/objects/Case/fields/Documentos_para_Entrega_Completos__c.field-meta.xml
<CustomField>
    <fullName>Documentos_para_Entrega_Completos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos para Entrega Completos</label>
    <type>Checkbox</type>
</CustomField>