force-app/main/default/objects/Case/fields/Entrega_aprobada__c.field-meta.xml
<CustomField>
    <fullName>Entrega_aprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrega aprobada</label>
    <type>Checkbox</type>
</CustomField>