force-app/main/default/objects/Case/fields/Escalado__c.field-meta.xml
<CustomField>
    <fullName>Escalado__c</fullName>
    <formula>IF(Nivel_de_Escalacin__c &gt;0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>