force-app/main/default/objects/Case/fields/Escalar_Caso__c.field-meta.xml
<CustomField>
    <fullName>Escalar_Caso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalar Caso</label>
    <type>Checkbox</type>
</CustomField>