force-app/main/default/objects/Case/fields/Estado_cita_recall__c.field-meta.xml
<CustomField>
    <fullName>Estado_cita_recall__c</fullName>
    <label>Estado de cita recall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asistió</fullName>
            </value>
            <value>
                <fullName>No asistió</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>