force-app/main/default/objects/Case/fields/Fecha_1era_notificacion_por_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_1era_notificacion_por_vencimiento__c</fullName>
    <label>Fecha 1era notificación por vencimiento</label>
    <type>DateTime</type>
</CustomField>