force-app/main/default/objects/Case/fields/Fecha_2da_notificacion_por_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_2da_notificacion_por_vencimiento__c</fullName>
    <label>Fecha 2da notificación por vencimiento</label>
    <type>DateTime</type>
</CustomField>