force-app/main/default/objects/Case/fields/Fecha_comprometido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_comprometido__c</fullName>
    <label>Fecha comprometido</label>
    <type>Date</type>
</CustomField>