force-app/main/default/objects/Case/fields/Fecha_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Despacho__c</fullName>
    <label>Fecha de Despacho</label>
    <type>Date</type>
</CustomField>