force-app/main/default/objects/Case/fields/Fecha_de_fin_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_fin_de_aprobacion__c</fullName>
    <label>Fecha de fin de aprobación</label>
    <type>Date</type>
</CustomField>