force-app/main/default/objects/Case/fields/Fecha_de_inicio_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio_aprobacion__c</fullName>
    <label>Fecha de inicio aprobación</label>
    <type>Date</type>
</CustomField>