force-app/main/default/objects/Case/fields/Fecha_est_de_final_de_alistamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_est_de_final_de_alistamiento__c</fullName>
    <label>Fecha est. de final de alistamiento</label>
    <type>Date</type>
</CustomField>