force-app/main/default/objects/Case/fields/FechaHora_agendamiento_best_drive__c.field-meta.xml
<CustomField>
    <fullName>FechaHora_agendamiento_best_drive__c</fullName>
    <label>Fecha/Hora agendamiento best drive</label>
    <type>DateTime</type>
</CustomField>