force-app/main/default/objects/Case/fields/Fechahora_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fechahora_Entrega__c</fullName>
    <label>Fecha/hora estimada entrega</label>
    <type>DateTime</type>
</CustomField>