force-app/main/default/objects/Case/fields/Garantia_aprobada__c.field-meta.xml
<CustomField>
    <fullName>Garantia_aprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantía aprobada</label>
    <type>Checkbox</type>
</CustomField>