force-app/main/default/objects/Case/fields/Garantia_motos_aprobada__c.field-meta.xml
<CustomField>
    <fullName>Garantia_motos_aprobada__c</fullName>
    <description>Campo para indicar si la garantía de motos fue aprobada o no</description>
    <label>Garantía motos aprobada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>