force-app/main/default/objects/Case/fields/Grupo_de_Parte__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Parte__c</fullName>
    <label>Grupo de Parte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHASIS</fullName>
            </value>
            <value>
                <fullName>MOTOR</fullName>
            </value>
            <value>
                <fullName>CARBURADOR</fullName>
            </value>
            <value>
                <fullName>ELECTRICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>