force-app/main/default/objects/Case/fields/Id_Apoyo__c.field-meta.xml
<CustomField>
    <fullName>Id_Apoyo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Apoyo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasosApoyando</relationshipName>
    <type>Lookup</type>
</CustomField>