force-app/main/default/objects/Case/fields/Identificacion_del_usuario__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_del_usuario__c</fullName>
    <label>Identificación del usuario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>