force-app/main/default/objects/Case/fields/Informe_de_lotes__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_lotes__c</fullName>
    <label>Informe de lotes</label>
    <type>Url</type>
</CustomField>