force-app/main/default/objects/Case/fields/Jefe_Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe Administrativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>