force-app/main/default/objects/Case/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>