force-app/main/default/objects/Case/fields/Linea__c.field-meta.xml
<CustomField>
    <fullName>Linea__c</fullName>
    <label>Línea</label>
    <length>40</length>
    <type>Text</type>
</CustomField>