force-app/main/default/objects/Case/fields/Lugar_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_despacho__c</fullName>
    <label>Lugar de despacho</label>
    <length>40</length>
    <type>Text</type>
</CustomField>