force-app/main/default/objects/Case/fields/Lugar_de_ubicacion_del_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_ubicacion_del_vehiculo__c</fullName>
    <label>Lugar de ubicación del vehículo</label>
    <type>TextArea</type>
</CustomField>