force-app/main/default/objects/Case/fields/Miembros_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Miembros_Equipo__c</fullName>
    <description>Cantidad de miembros del equipo del caso (Objeto Custom)</description>
    <label>Miembros del Equipo</label>
    <summaryForeignKey>Miembro_Equipo_Caso__c.Caso__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>