force-app/main/default/objects/Case/fields/Modelo_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_interes__c</fullName>
    <label>Modelo de interés</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCORD</fullName>
            </value>
            <value>
                <fullName>CITY</fullName>
            </value>
            <value>
                <fullName>CIVIC</fullName>
            </value>
            <value>
                <fullName>CIVIC SI</fullName>
            </value>
            <value>
                <fullName>CIVIC TYPE R</fullName>
            </value>
            <value>
                <fullName>CR-V</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>HR-V</fullName>
            </value>
            <value>
                <fullName>ODYSSEY</fullName>
            </value>
            <value>
                <fullName>PILOT</fullName>
            </value>
            <value>
                <fullName>WR-V</fullName>
            </value>
            <value>
                <fullName>USADOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>