force-app/main/default/objects/Case/fields/Modelo_del_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_del_vehiculo__c</fullName>
    <label>Modelo del vehículo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>