force-app/main/default/objects/Case/fields/Motos_RecordTypeDE__c.field-meta.xml
<CustomField>
    <fullName>Motos_RecordTypeDE__c</fullName>
    <label>Tipos de Registro para DigitalEngagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Habeas Data</fullName>
            </value>
            <value>
                <fullName>PQRSFS Motos</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>