force-app/main/default/objects/Case/fields/Nivel_de_Escalacin__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Escalacin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nivel de Escalación</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>