force-app/main/default/objects/Case/fields/No_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>No_de_Pedido__c</fullName>
    <label>No. de Pedido</label>
    <length>15</length>
    <type>Text</type>
</CustomField>