force-app/main/default/objects/Case/fields/Notificado_por_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Notificado_por_vencimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificado por vencimiento</label>
    <type>Checkbox</type>
</CustomField>