force-app/main/default/objects/Case/fields/Numero_de_la_OT__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_la_OT__c</fullName>
    <label>Número de la OT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>